--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^5.3.0",
+    "@astrojs/sitemap": "^3.7.0",
     "@astrojs/tailwind": "^6.0.2",
+    "astro": "^5.3.0",
     "tailwindcss": "^3.4.17"
   }
 }
